<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyProject</string>

    <string name="tab_home">Главная</string>
    <string name="tab_analytics">Аналитика</string>
    <string name="tab_settings">Настройки</string>

    <string name="home_title">Главная</string>
    <string name="home_total_balance">Общий баланс</string>
    <string name="home_add_op">Создать операцию</string>
    <string name="home_all_ops">Список операций</string>
    <string name="home_categories_admin">Категории (только ADMIN)</string>
    <string name="home_last_ops">Последние операции</string>

    <string name="income">Доход</string>
    <string name="expense">Расход</string>
    <string name="avg_per_day">Средний в день</string>
    <string name="total_for_period">За период</string>
    <string name="pick_period">Выбрать период</string>
    <string name="empty_no_data">Нет данных за выбранный период</string>

    <string name="sort_new">Новые</string>
    <string name="sort_old">Старые</string>

    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="delete_all">Удалить все</string>

    <string name="confirm_delete_one">Удалить эту операцию?</string>
    <string name="confirm_delete_all">Удалить все операции?</string>

    <string name="settings_role">Роль: %1$s</string>
    <string name="settings_currency">Отображение валюты</string>
    <string name="settings_lang">Язык</string>
    <string name="settings_theme">Тема</string>
    <string name="settings_logout">Выйти</string>

    <string name="lang_ru">Русский</string>
    <string name="lang_en">Английский</string>
    <string name="lang_tr">Турецкий</string>

    <string name="sort_new_first">Сначала новые</string>
    <string name="sort_old_first">Сначала старые</string>
    <string name="filter_income">Доходы</string>
    <string name="filter_expense">Расходы</string>
    <string name="filter_all">Все</string>
    <string name="sort_all">Без сортировки</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="login_title">Вход</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_btn">Войти</string>
    <string name="no_account_register">Нет аккаунта? Зарегистрироваться</string>

    <string name="register_title">Регистрация</string>
    <string name="register_btn">Зарегистрироваться</string>
    <string name="password_repeat_hint">Повторите пароль</string>
    <string name="already_have_account_login">Уже есть аккаунт? Войти</string>

    <string name="choose_role">Выберите роль</string>
    <string name="admin">Администратор</string>
    <string name="user">Пользователь</string>


</resources>
